[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=80",
  "setuptools-scm[toml]>=8",
]

[project]
name = "socket-proxy"
dynamic = ["version"]
requires-python = ">= 3.9"
authors = [
  {name = "Florian Kantelberg", email = "florian.kantelberg@mailbox.org"},
]
description = "Proxy TCP ports of local systems"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["proxy", "socket", "network"]
urls.source = "https://github.com/fkantelberg/socket-proxy"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "typing_extensions",
]

[project.optional-dependencies]
api = ["aiohttp"]
event = ["aiohttp"]

[project.scripts]
socket_proxy = "socket_proxy.__main__:main"

[tool.coverage]
omit = "*/tunnel_gui.py"
source = "*/socket_proxy/*"
concurrency = "multiprocessing"
parallel = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
disable_error_code = ["attr-defined", "import", "union-attr"]

[tool.pylint.main]
ignored-modules = ["aiohttp", "nox", "pytest", "socket_proxy"]

[tool.pylint.imports]
ignored-modules = ["aiohttp", "nox", "pytest", "socket_proxy"]

[tool.pylint."messages control"]
disable = """
  attribute-defined-outside-init,
  bad-inline-option,
  bad-mcs-classmethod-argument,
  broad-except,
  deprecated-pragma,
  duplicate-code,
  file-ignored,
  invalid-name,
  locally-disabled,
  logging-fstring-interpolation,
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  protected-access,
  raw-checker-failed,
  redefined-outer-name,
  suppressed-message,
  too-few-public-methods,
  too-many-arguments,
  too-many-instance-attributes,
  too-many-return-statements,
  use-symbolic-message-instead,
  useless-suppression,
"""

[tool.ruff]
line-length = 88
indent-width = 4
target-version = 'py39'

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 5
log_level = "info"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/socket_proxy/version.py"
