[metadata]
name = socket-proxy
version = attr: socket_proxy.VERSION
author = Florian Kantelberg
author_email = florian.kantelberg@mailbox.org
description = Proxy TCP ports of local systems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = proxy socket network
url = https://github.com/fkantelberg/socket-proxy
classifiers=
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requires = >=3.7
extra_require =
  api
  event

[options.entry_points]
console_scripts =
    socket_proxy = socket_proxy.__main__:main

[options.extras_require]
api = aiohttp
event = aiohttp

[options.packages.find]
where = src
